# egison

./: '  .cursorignore  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  AUTHORS  BUILD-LOW-MEMORY.md  CLAUDE.md  CURRENT_STATUS.md  Changelog.md  Dockerfile  LICENSE  README.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  REFACTORING_IEXPR.md  REFACTORING_IEXPR_V2.md  REFACTORING_PHASE2.md  REFACTORING_VERIFICATION.md  Setup.hs  THANKS.md  a.egi  cabal.project.local.dev  egison.cabal  generate_answer.sh  generate_answers.sh  normalize.egi  stack.yaml  t.egi  test.egi  translate-lib.sh
benchmark/: Benchmark-Collection.hs  Benchmark.hs  collection-bench-cons-large.egi  collection-bench-cons.egi  collection-bench-snoc.egi  collection-bench-star-colon.egi  fact-30000.egi  prime-pairs-2.egi  prime-pairs-6.egi
cabal/: egison-sqlite.cabal  egison.cabal
design/: COMPLETED.md  FILE_MAPPING.md  README.md  algebraic-extension-simplification.md  cas-simplification.md  constraint-aware-unification.md  declare-symbol-feature.md  design-type-infer-flow.md  dictionary-passing-plan.md  dictionary-passing-progress.md  differential-form-index-sorting.md  eval-iexpr-conversion-complete.md  fix-double-dictionary-application.md  fix-type.md  function-symbol-formurae.md  function-symbol.md  implementation.md  matcher-slot.md  matcher-type-checking-verification.md  memo.md  paper-compliance-roadmap.md  pattern-function-implementation.md  pattern.md  pwl-ramsey.md  refactor-type-desugar.md  runtime-type-dispatch.md  sample-math.md  sample-test.md  session-summary-2026-01-10.md  tensor-map-higher-order-lift.md  tensor-map-insertion-simple.md  tensor-map-insertion-wedge.md  tensor-map-insertion.md  tiexpr-migration-complete.md  tiexpr-migration-status.md  tiexpr-next-steps.md  type-cas-implementation-status.md  type-cas-issues.md  type-cas-quotient.md  type-cas-single-slot-update.md  (+9 more)
design/cas-tower-usecases/: 01-type-alias.egi  02-gaussian-integers.egi  03-subtype-promotion.egi  04-gaussian-poly.egi  05-quadratic-extension.egi  06-combined-extensions.egi  07-modular.egi  08-chebyshev.egi  08-join-completion.egi  09-quaternion.egi  README.md
dev/: test.sh
dev/test/: syntax.egi
doc/: Design.txt  Geometry.txt  PatternMatch.txt  Schedule.txt  TODO.txt  TypeCheck.txt
docs/: README.md  conf.py  index.md  index.rst
docs/manual/: command-line-options.rst  libs.md  libs.rst  migration-guide-for-new-syntax.rst  new-syntax-migration-guide.rst  primitive-functions.md  primitive-functions.rst
docs/reference/: basic-syntax.rst  builtin-data.rst  builtin-functions.rst  command-line-options.rst  install.rst  libs.rst  migration-guide-for-new-syntax.rst  pattern-matching.rst  patterns.rst  primitive-functions.rst  tensor.rst
docs/tutorial/: getting-started.rst  io.rst  quick-tour.rst
elisp/: README.md  egison-mode.el  s-egison-mode.el
emacs/: README.md  egison-mode.el
euler/: 11.egi  14.egi  15.egi  19.egi  30.egi  453.egi  47.egi  5.egi
euler/1-9/: 1.egi  2.egi  3.egi  4.egi  5.egi  6.egi  7.egi  8.egi  9.egi
euler/10-99/: 10.egi  12.egi  13.egi  14.egi  15.egi  16.egi  17.egi  18.egi  20.egi  21.egi  23.egi  24.egi  25.egi  26.egi  27.egi  28.egi  29.egi  30.egi  31-naive.egi  31.egi  34.egi  38.egi  40.egi  43.egi  46.egi  47.egi  48.egi  50.egi  53.egi  59.egi  66.egi  67.egi  79.egi  81.egi  92.egi  95.egi  97.egi  99.egi
euler/100-999/: 100.egi  103.egi  122.egi  152.egi  169.egi  453.egi  463.egi  474.egi  475.egi
euler/99-999/: 169.egi
hs-src/: Paths_egison_sample.hs
hs-src/Interpreter/: egison.hs  egison_flymake.hs  egisoni.hs
hs-src/Language/: Egison.hs
hs-src/Tool/: translator.hs
lib/: core.egi  graph.egi  poker-hands.egi  primes.egi  tree.egi  xml.egi
lib/core/: arithmetic.egi  array.egi  assoc.egi  base.egi  collection.egi  collection.segi  database.egi  deprecated.egi  io.egi  math-expr.egi  math-normalize.egi  math.egi  maybe.egi  maybe.segi  natural-number.egi  number.egi  number.segi  order.egi  pattern.egi  random.egi  random.segi  sexpr.egi  sexpr.segi  shell.egi  sort.egi  string.egi  tensor.egi  term-rewriting.egi  typeclass.egi
lib/database/: collection.egi  sql.egi  sqlite.egi
lib/graph/: graph.egi
lib/math/: algebra.egi  analysis.egi  arithmetic.egi  (+12 more)
man/: Makefile  conf.py  index.rst
minitest/: 000-eq-baseline.egi  001-type-class.egi  002-explicit-constraints.egi  003-where-less-instance.egi  004-algebraic-hierarchy.egi  005-gcd-domain.egi  006-div-basic.egi  007-integer-minus.egi
nons-sample/: chopsticks.egi  generalized-sequential-pattern-mining.egi
nons-test/: .gitignore  listdfs.egi  loadpi.egi  new-tensor.egi  nishiwaki.egi  pi.egi  repl.egi  test.sh
nons2-test/: repl.egi
presentation/: 1.egi  2.egi
sample/: 3sat.egi  STATUS.md  bellman-ford.egi  bellman-ford.segi  binary-counter.egi  binary-counter.segi  bipartite-graph.egi  bipartite-graph.segi  cdcl.egi  chopsticks.egi  chopsticks2.egi  chopsticks3.txt  demo1-ja.egi  demo1.egi  dp.egi  efficient-backtracking.egi  five-color.egi  five-color.segi  generalized-sequential-pattern-mining.egi  graph.egi  index.egi  infinite-list.egi  ioRef.egi  mahjong.egi  mickey.egi  mickey.segi  n-queen.egi  n-queens.egi  nishiwaki.egi  one-minute-demo.egi  one-minute-first.egi  one-minute-second.egi  one-minute-second.segi  pi.egi  poker-hands-with-joker.egi  poker-hands.egi  prime-millionaire.egi  prime-millionaire.segi  primes.egi  primes.segi  (+19 more)
scripts/: docsgen.py  run-sample-suite.sh  sample-timings.txt
sexpr-sample/: demo1.segi  one-minute-first.segi  randomized-3sat.segi  unify.segi
small-benchmark/: fact-bench.egi  pm-paper-bench.egi
test/: CLITest.hs  OptionsTest.hs  README.md  Test.hs  UnitTest.hs  array-test.egi  base-test.egi  collection-test.egi  dp.egi  graph-test.egi  hash-test.egi  pattern-match-test.egi  poker.egi  primitive.egi  primitive.segi  syntax-test.egi  syntax.egi  syntax.segi  syntax2.egi  translator.egi
vim/: README.md
vscode-extension/: .vscodeignore  CHANGELOG.md  INSTALL.ja.md  INSTALL.md  README.md  language-configuration.json  package.json
(+500 files in other folders)
